<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/campoDeCalculo"
        android:text="@string/campoDeCalculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/campoDeNumero"
        android:text="@string/campoDeNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="82sp"
        android:gravity="right"
        android:textAlignment="gravity"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botao1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoUm"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoDois"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botao3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoTres"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botaoSoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mais"
            android:onClick="escrever"
            />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botao4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoQuatro"
            android:onClick="escrever"

        />
        <Button
            android:id="@+id/botao5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoCinco"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botao6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoSeis"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botaoMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menos"
            android:onClick="escrever"
            />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botao7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoSete"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botao8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoOito"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botao9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoNove"
            android:onClick="escrever"
        />
        <Button
            android:id="@+id/botaoMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vezes"
            android:onClick="escrever"
            />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/botaoLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/limpar"
            android:onClick="limpar"
            />
        <Button
            android:id="@+id/botao0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/botaoZero"
            android:onClick="escrever"
            />
        <Button
            android:id="@+id/botaoIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/igual"
            android:onClick="calculaResultado"

            />
        <Button
            android:id="@+id/botaoDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/divisao"
            android:onClick="escrever"
            />
    </LinearLayout>

</LinearLayout>